--- a/internal/http-server/handlers/pages/landing/components.templ
+++ b/internal/http-server/handlers/pages/landing/components.templ
@@ -1,9 +1,14 @@
 package landing
 
 templ hello() {
-    <div>Hello, Bro</div>
+    <div class="text-3xl font-bold underline text-clifford">Hello, Bro</div>
 }
 
 templ page() {
-    @hello()
+    <head>
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    </head>
+    <body class="flex justify-center items-center">
+        @hello()
+    </body>
 }
